Fixed a few problems with touch on mobile:
1) Disabled selection on mobile
2) Disabled sticky buttons on mobile (media q)
3) Fixed problem with paused autoscroll after touch on slider

--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -32,16 +32,23 @@
 
         & .arrow--left { margin-right: 7px;}
 
-        &:hover {
-            border: 1px solid @borderColor;
-            box-shadow: 1px 1px 10px lighten(@shadowColor, 10%);
-            transform: scale(1.1);
+        @media (hover: hover) {
+            &:hover {
+                border: 1px solid @borderColor;
+                box-shadow: 1px 1px 10px lighten(@shadowColor, 10%);
+                transform: scale(1.1);
 
-            & .arrow { opacity: 1;}
+                & .arrow { opacity: 1;}
+            }
         }
 
-        @media (max-width: 991px) {
+        @media (hover: none) {
+            &:active {
+                border: 1px solid @borderColor;
+                box-shadow: 1px 1px 10px lighten(@shadowColor, 10%);
 
+                & .arrow { opacity: 1;}
+            }
         }
     }
 
@@ -59,7 +66,13 @@
         transform: translateX(-50%);
         bottom: 40px;
 
-        &:hover { box-shadow: 1px 1px 10px darken(@shadowColor, 20%);}
+        @media (hover: hover) {
+            &:hover {box-shadow: 1px 1px 10px darken(@shadowColor, 20%);}
+        }
+
+        @media (hover: none) {
+            &:active {box-shadow: 1px 1px 10px darken(@shadowColor, 20%);}
+        }
     }
 
     &--disabled { display: none;}
