--- a/css/style.less
+++ b/css/style.less
@@ -27,7 +27,9 @@ h1 {
     height: 70%;
 
     cursor: pointer;
-    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    // user-select: none;
 }
 
 // ============Blocks===================
